добавил секцию особености

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github-home</title>
 </head>
-<body>
+<bod y>
     <header>
          <!--Header site -->
            <nav>
@@ -23,10 +23,53 @@
     </header>
     <!--head imagin-->
     <section>
-        <img src="./css/img/Header img.png" alt="Header img.png">
+        <img src="./css/img/Header img.jpg" alt="команда">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="/">Заказать услугу</a>
     </section>
-
-</body>
+    <!--features-->
+    <section>
+        <ul>
+            <li>
+                <img src="./css/img/antenna 1.svg" alt="antenna">
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li> 
+                <img src="./css/img/clock 1.svg" alt="clok">
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+           </li>
+             <li>
+                 <img src="./css/img/Vector.svg" alt="vector">
+                 <h3>Планирование</h3>
+                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+             </li>
+             <li>
+                 <img src="./css/img/astronaut 1.svg" alt="astronaut">
+                 <h3>Современные технологии</h3>
+                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+             </li>
+        </ul>
+    </section>
+    <!--development site-->
+    <section>
+        <ul>
+           <li>
+               <h2>Чем мы занимаемся</h2>
+               <img src="./css/img/1.jpg" alt="noutbook">
+             <p><a href="/">Десктопные приложения</a></p>  
+          </li>
+            <li>
+                <img src="./css/img/box.jpg" alt="mobile">
+                 <p><a href="/">Мобильные приложения</a></p>   
+            </li>
+            <li>
+                <img src="./css/img/2.jpg" alt="manitor">
+              <p><a href="/">Дизайнерские решения</a></p>  
+            </li>
+        </ul>
+    </section>
+    
+</bod>
 </html>
