--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
     <section>
         <ul>
             <li>
-                <img src="./css/img/antenna 1.svg" alt="antenna">
+                <a href=""><img src="./css/img/antenna 1.svg" alt="antenna"></a> 
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li> 
-                <img src="./css/img/clock 1.svg" alt="clok">
+                 <a href=""> <img src="./css/img/clock 1.svg" alt="clok"></a> 
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
            </li>
              <li>
-                 <img src="./css/img/Vector.svg" alt="vector">
+                  <a href=""><img src="./css/img/Vector.svg" alt="vector"></a> 
                  <h3>Планирование</h3>
                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
              </li>
              <li>
-                 <img src="./css/img/astronaut 1.svg" alt="astronaut">
+                  <a href=""><img src="./css/img/astronaut 1.svg" alt="astronaut"></a> 
                  <h3>Современные технологии</h3>
                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
              </li>
@@ -70,6 +70,51 @@
             </li>
         </ul>
     </section>
-    
+    <!--our team-->
+    <section>
+        <ul>
+            <li>
+                <img src="./css/img/Н.К.jpg" alt="foto">
+                <p>Николай Кучеренко</p>
+                <p>Product Designer</p>
+            </li>
+            <li><a href="" aria-label="Instagram">Instagram </a></li>
+            <li> <a href="" aria-label="Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+        <ul>
+                <img src="./css/img/О.И.jpg" alt="foto">
+                <p>Ольга Иванова</p>
+                <p>Frontend Developer</p>
+            </li>
+            <li><a href="" aria-label="Instagram">Instagram </a></li>
+            <li> <a href="" aria-label="Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+        <ul>
+            <li>
+                <img src="./css/img/А.Ш.jpg" alt="foto">
+                <p>Андрей Шевченко</p>
+                <p>Marketing</p>
+            </li>
+            <li><a href="" aria-label="Instagram">Instagram </a></li>
+            <li> <a href="" aria-label="Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+        <ul>
+        <li>
+            <img src="./css/img/И.Н.jpg" alt="foto">
+            <p>Иван Николаев</p>
+            <p>UI Designer</p>
+        </li>
+        <li><a href="" aria-label="Instagram">Instagram </a></li>
+        <li> <a href="" aria-label="Twitter">Twitter</a></li>
+        <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+    </section>
 </bod>
 </html>
