--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github-home</title>
 </head>
-<bod y>
+<body>
     <header>
          <!--Header site -->
            <nav>
@@ -72,6 +72,7 @@
     </section>
     <!--our team-->
     <section>
+        <h2>Наша команда</h2>
         <ul>
             <li>
                 <img src="./css/img/Н.К.jpg" alt="foto">
@@ -116,5 +117,17 @@
         <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
         </ul>
     </section>
-</bod>
+    <!--Regular customers-->
+    <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+            <li><a href=""><img src="./css/img/logo 1.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo 2.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo 3.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo 4.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo 5.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo 6.svg" alt="logo company"></a></li>
+        </ul>
+    </section>
+</body>
 </html>
