--- a/index.html
+++ b/index.html
@@ -129,5 +129,23 @@
             <li><a href=""><img src="./css/img/logo 6.svg" alt="logo company"></a></li>
         </ul>
     </section>
+    <!--Footer-->
+    <footer>
+        <div>
+            <p>Web Studio</p>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <p>info@example.com</p>
+            <p>+38 099 111 11 11</p>
+        </div>
+        <div>
+            <b>присоединяйтесь</b>
+             <a href="" aria-label="Instagram">Instagram </a>
+             <a href="" aria-label="Twitter">Twitter</a>
+             <a href="" aria-label="Facebbook">Facebbook</a>
+             <a href="" aria-label="LinkedIn">LinkedIn</a>
+        </div>
+  
+
+    </footer>
 </body>
 </html>
