--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!--head imagin-->
     <section>
-        <img src="./css/img/Header img.jpg" alt="команда">
+        <img src="./css/img/Header" alt="команда">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="/">Заказать услугу</a>
     </section>
@@ -31,22 +31,22 @@
     <section>
         <ul>
             <li>
-                <a href=""><img src="./css/img/antenna 1.svg" alt="antenna"></a> 
+                <a href=""><img src="./css/img/antenna" alt="antenna"></a> 
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li> 
-                 <a href=""> <img src="./css/img/clock 1.svg" alt="clok"></a> 
+                 <a href=""> <img src="./css/img/clock" alt="clok"></a> 
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
            </li>
              <li>
-                  <a href=""><img src="./css/img/Vector.svg" alt="vector"></a> 
+                  <a href=""><img src="./css/img/Vector" alt="vector"></a> 
                  <h3>Планирование</h3>
                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
              </li>
              <li>
-                  <a href=""><img src="./css/img/astronaut 1.svg" alt="astronaut"></a> 
+                  <a href=""><img src="./css/img/astronaut" alt="astronaut"></a> 
                  <h3>Современные технологии</h3>
                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
              </li>
@@ -85,7 +85,8 @@
             <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
         </ul>
         <ul>
-                <img src="./css/img/О.И.jpg" alt="foto">
+            <li>
+                <img src="./css/img/О.И." alt="foto">
                 <p>Ольга Иванова</p>
                 <p>Frontend Developer</p>
             </li>
@@ -121,12 +122,12 @@
     <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-            <li><a href=""><img src="./css/img/logo 1.svg" alt="logo company"></a></li>
-            <li><a href=""><img src="./css/img/logo 2.svg" alt="logo company"></a></li>
-            <li><a href=""><img src="./css/img/logo 3.svg" alt="logo company"></a></li>
-            <li><a href=""><img src="./css/img/logo 4.svg" alt="logo company"></a></li>
-            <li><a href=""><img src="./css/img/logo 5.svg" alt="logo company"></a></li>
-            <li><a href=""><img src="./css/img/logo 6.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo1.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo2.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo3.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo4.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo5.svg" alt="logo company"></a></li>
+            <li><a href=""><img src="./css/img/logo6.svg" alt="logo company"></a></li>
         </ul>
     </section>
     <!--Footer-->
