--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!--head imagin-->
     <section>
-        <img src="./css/img/Header" alt="команда">
+        <img src="./css/img/Header.jpg" alt="команда">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="/">Заказать услугу</a>
     </section>
@@ -31,22 +31,22 @@
     <section>
         <ul>
             <li>
-                <a href=""><img src="./css/img/antenna" alt="antenna"></a> 
+                <a href=""><img src="./css/img/antenna1.svg" alt="antenna"></a> 
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li> 
-                 <a href=""> <img src="./css/img/clock" alt="clok"></a> 
+                 <a href=""> <img src="./css/img/clock1.svg" alt="clok"></a> 
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
            </li>
              <li>
-                  <a href=""><img src="./css/img/Vector" alt="vector"></a> 
+                  <a href=""><img src="./css/img/Vector.svg" alt="vector"></a> 
                  <h3>Планирование</h3>
                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
              </li>
              <li>
-                  <a href=""><img src="./css/img/astronaut" alt="astronaut"></a> 
+                  <a href=""><img src="./css/img/astronaut1.svg" alt="astronaut"></a> 
                  <h3>Современные технологии</h3>
                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
              </li>
@@ -86,7 +86,7 @@
         </ul>
         <ul>
             <li>
-                <img src="./css/img/О.И." alt="foto">
+                <img src="./css/img/О.И.jpg" alt="foto">
                 <p>Ольга Иванова</p>
                 <p>Frontend Developer</p>
             </li>
