--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                    <p>Web Studio</p>
               <ul>
                    <li> <a href="/">Студия</a></li>
-                   <li>Портфолио</li>
-                   <li>Контакты</li>
+                   <li> <a href="/">Портфолио</a></li>
+                   <li> <a href="/">Контакты</a></li>
              </ul>
          </nav>
           <ul>
@@ -21,7 +21,8 @@
               <li>+38 096 111 11 11</li>
          </ul>
     </header>
-    <!--head imagin-->
+<main>
+       <!--head imagin-->
     <section>
         <img src="./css/img/Header.jpg" alt="команда">
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -31,22 +32,22 @@
     <section>
         <ul>
             <li>
-                <a href=""><img src="./css/img/antenna1.svg" alt="antenna"></a> 
+                <img src="./css/img/antenna1.svg" alt="antenna">
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li> 
-                 <a href=""> <img src="./css/img/clock1.svg" alt="clok"></a> 
+            <li>
+                <img src="./css/img/clock1.svg" alt="clok">
                 <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
            </li>
              <li>
-                  <a href=""><img src="./css/img/Vector.svg" alt="vector"></a> 
+                <img src="./css/img/Vector.svg" alt="vector">
                  <h3>Планирование</h3>
                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
              </li>
              <li>
-                  <a href=""><img src="./css/img/astronaut1.svg" alt="astronaut"></a> 
+                <img src="./css/img/astronaut1.svg" alt="astronaut">
                  <h3>Современные технологии</h3>
                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
              </li>
@@ -54,11 +55,11 @@
     </section>
     <!--development site-->
     <section>
+        <h2>Чем мы занимаемся</h2>
         <ul>
-           <li>
-               <h2>Чем мы занимаемся</h2>
+           <li>   
                <img src="./css/img/1.jpg" alt="noutbook">
-             <p><a href="/">Десктопные приложения</a></p>  
+               <p><a href="/">Десктопные приложения</a></p>  
           </li>
             <li>
                 <img src="./css/img/box.jpg" alt="mobile">
@@ -79,44 +80,57 @@
                 <p>Николай Кучеренко</p>
                 <p>Product Designer</p>
             </li>
-            <li><a href="" aria-label="Instagram">Instagram </a></li>
-            <li> <a href="" aria-label="Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
         </ul>
-        <ul>
+            <ul>
+                 <li><a href="" aria-label="Instagram">Instagram </a></li>
+                 <li> <a href="" aria-label="Twitter">Twitter</a></li>
+                 <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+                 <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+           </ul>
+
+         <ul>
             <li>
                 <img src="./css/img/О.И.jpg" alt="foto">
                 <p>Ольга Иванова</p>
                 <p>Frontend Developer</p>
             </li>
-            <li><a href="" aria-label="Instagram">Instagram </a></li>
-            <li> <a href="" aria-label="Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
         </ul>
-        <ul>
-            <li>
+         <ul>
+               <li><a href="" aria-label="Instagram">Instagram </a></li>
+               <li> <a href="" aria-label="Twitter">Twitter</a></li>
+               <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+               <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+         </ul>
+
+         <ul>
+             <li>
                 <img src="./css/img/А.Ш.jpg" alt="foto">
                 <p>Андрей Шевченко</p>
                 <p>Marketing</p>
             </li>
+        </ul>
+
+        <ul>
             <li><a href="" aria-label="Instagram">Instagram </a></li>
             <li> <a href="" aria-label="Twitter">Twitter</a></li>
             <li><a href="" aria-label="Facebbook">Facebbook</a></li>
             <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
         </ul>
+        
         <ul>
-        <li>
-            <img src="./css/img/И.Н.jpg" alt="foto">
-            <p>Иван Николаев</p>
-            <p>UI Designer</p>
-        </li>
-        <li><a href="" aria-label="Instagram">Instagram </a></li>
-        <li> <a href="" aria-label="Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-        </ul>
+            <li>
+                 <img src="./css/img/И.Н.jpg" alt="foto">
+                <p>Иван Николаев</p>
+                 <p>UI Designer</p>
+           </li>
+       </ul>
+        <ul>
+            <li><a href="" aria-label="Instagram">Instagram </a></li>
+            <li> <a href="" aria-label="Twitter">Twitter</a></li>
+            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+       </ul>
+
     </section>
     <!--Regular customers-->
     <section>
@@ -130,23 +144,22 @@
             <li><a href=""><img src="./css/img/logo6.svg" alt="logo company"></a></li>
         </ul>
     </section>
+</main>
     <!--Footer-->
     <footer>
-        <div>
+        <address>
             <p>Web Studio</p>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <p>info@example.com</p>
+            <a href="info@example.com">info@example.com</a>
             <p>+38 099 111 11 11</p>
-        </div>
-        <div>
-            <b>присоединяйтесь</b>
-             <a href="" aria-label="Instagram">Instagram </a>
-             <a href="" aria-label="Twitter">Twitter</a>
-             <a href="" aria-label="Facebbook">Facebbook</a>
-             <a href="" aria-label="LinkedIn">LinkedIn</a>
-        </div>
-  
-
+        </address>
+        <ul>
+           <li> <b>присоединяйтесь</b> </li>     
+           <li> <a href="" aria-label="Instagram">Instagram </a></li>   
+           <li><a href="" aria-label="Twitter">Twitter</a></li>    
+           <li><a href="" aria-label="Facebbook">Facebbook</a></li>  
+           <li><a href="" aria-label="LinkedIn">LinkedIn</a></li> 
+        </ul>
     </footer>
 </body>
 </html>
