--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
          <!--Header site -->
            <nav>
-                   <p>Web Studio</p>
+                   <a href="">Web Studio</a>
               <ul>
                    <li> <a href="/">Студия</a></li>
                    <li> <a href="/">Портфолио</a></li>
@@ -18,7 +18,7 @@
          </nav>
           <ul>
               <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-              <li>+38 096 111 11 11</li>
+              <li> <a href="tel:+380961111111">+380961111111</a></li>
          </ul>
     </header>
 <main>
