--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!--Footer-->
     <footer>
         <address>
-            <p>Web Studio</p>
+            <a href="">Web Studio</a>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <a href="info@example.com">info@example.com</a>
             <p>+38 099 111 11 11</p>
