Добавил размер картинок и команде исправил список

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main>
        <!--head imagin-->
     <section>
-        <img src="./css/img/Header.jpg" alt="команда">
+        <img src="./css/img/Header.jpg" alt="команда" width="1600">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="/">Заказать услугу</a>
     </section>
@@ -58,79 +58,71 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
            <li>   
-               <img src="./css/img/1.jpg" alt="noutbook">
+               <img src="./css/img/1.jpg" alt="noutbook" width="370">
                <p><a href="/">Десктопные приложения</a></p>  
           </li>
             <li>
-                <img src="./css/img/box.jpg" alt="mobile">
+                <img src="./css/img/box.jpg" alt="mobile" width="370">
                  <p><a href="/">Мобильные приложения</a></p>   
             </li>
             <li>
-                <img src="./css/img/2.jpg" alt="manitor">
+                <img src="./css/img/2.jpg" alt="manitor" width="370">
               <p><a href="/">Дизайнерские решения</a></p>  
             </li>
         </ul>
     </section>
     <!--our team-->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./css/img/Н.К.jpg" alt="foto">
-                <p>Николай Кучеренко</p>
-                <p>Product Designer</p>
-            </li>
-        </ul>
-            <ul>
-                 <li><a href="" aria-label="Instagram">Instagram </a></li>
-                 <li> <a href="" aria-label="Twitter">Twitter</a></li>
-                 <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-                 <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-           </ul>
+     <section>
+           <h2>Наша команда</h2>
+          <ul>
+                <li>
+                        <img src="./css/img/Н.К.jpg" alt="foto" width="270">
+                        <h3>Николай Кучеренко</h3>
+                        <p>Product Designer</p>
+                    <ul>
+                        <li><a href="" aria-label="Instagram">Instagram </a></li>
+                        <li> <a href="" aria-label="Twitter">Twitter</a></li>
+                        <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+                        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                   </ul>
+                </li> 
 
-         <ul>
-            <li>
-                <img src="./css/img/О.И.jpg" alt="foto">
-                <p>Ольга Иванова</p>
-                <p>Frontend Developer</p>
-            </li>
-        </ul>
-         <ul>
-               <li><a href="" aria-label="Instagram">Instagram </a></li>
-               <li> <a href="" aria-label="Twitter">Twitter</a></li>
-               <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-               <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-         </ul>
+                <li>    
+                        <img src="./css/img/О.И.jpg" alt="foto" width="270">
+                        <h3>Ольга Иванова</h3>
+                        <p>Frontend Developer</p>
+                    <ul>
+                        <li><a href="" aria-label="Instagram">Instagram </a></li>
+                        <li> <a href="" aria-label="Twitter">Twitter</a></li>
+                        <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+                        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                   </ul>
+               </li>
 
-         <ul>
-             <li>
-                <img src="./css/img/А.Ш.jpg" alt="foto">
-                <p>Андрей Шевченко</p>
-                <p>Marketing</p>
-            </li>
-        </ul>
+                  <li>
+                        <img src="./css/img/А.Ш.jpg" alt="foto" width="270">    
+                        <h3>Андрей Шевченко</h3>
+                        <p>Marketing</p>
+                      <ul>
+                         <li><a href="" aria-label="Instagram">Instagram </a></li>
+                         <li> <a href="" aria-label="Twitter">Twitter</a></li>
+                         <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+                         <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                      </ul>
+                  </li>
 
-        <ul>
-            <li><a href="" aria-label="Instagram">Instagram </a></li>
-            <li> <a href="" aria-label="Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-        </ul>
-        
-        <ul>
-            <li>
-                 <img src="./css/img/И.Н.jpg" alt="foto">
-                <p>Иван Николаев</p>
-                 <p>UI Designer</p>
-           </li>
-       </ul>
-        <ul>
-            <li><a href="" aria-label="Instagram">Instagram </a></li>
-            <li> <a href="" aria-label="Twitter">Twitter</a></li>
-            <li><a href="" aria-label="Facebbook">Facebbook</a></li>
-            <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-       </ul>
-
+                  <li>
+                        <img src="./css/img/И.Н.jpg" alt="foto" width="270">
+                        <h3>Иван Николаев</h3>
+                        <p>UI Designer</p>
+                      <ul>
+                          <li><a href="" aria-label="Instagram">Instagram </a></li>
+                          <li> <a href="" aria-label="Twitter">Twitter</a></li>
+                          <li><a href="" aria-label="Facebbook">Facebbook</a></li>
+                          <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
+                     </ul>
+                 </li>
+            </ul>  
     </section>
     <!--Regular customers-->
     <section>
@@ -147,19 +139,19 @@
 </main>
     <!--Footer-->
     <footer>
-        <address>
-            <a href="">Web Studio</a>
+          <a href="">Web Studio</a>
+       <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <a href="info@example.com">info@example.com</a>
             <p>+38 099 111 11 11</p>
-        </address>
-        <ul>
-           <li> <b>присоединяйтесь</b> </li>     
-           <li> <a href="" aria-label="Instagram">Instagram </a></li>   
-           <li><a href="" aria-label="Twitter">Twitter</a></li>    
-           <li><a href="" aria-label="Facebbook">Facebbook</a></li>  
-           <li><a href="" aria-label="LinkedIn">LinkedIn</a></li> 
-        </ul>
+      </address>
+           <b>присоединяйтесь</b> 
+           <ul>
+              <li> <a href="" aria-label="Instagram">Instagram </a></li>   
+              <li><a href="" aria-label="Twitter">Twitter</a></li>    
+              <li><a href="" aria-label="Facebbook">Facebbook</a></li>  
+              <li><a href="" aria-label="LinkedIn">LinkedIn</a></li> 
+          </ul>
     </footer>
 </body>
 </html>
